k8s/02-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulsar-consumer
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pulsar-consumer
  template:
    metadata:
      labels:
        app: pulsar-consumer
    spec:
      containers:
        - name: pulsar-consumer
          image: pulsar-consumer:latest
          imagePullPolicy: Never
